[package]
name = "macro_types"
version = "0.5.0"
edition = "2021"
description = "A library to make it easier to create procedural macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheLazyDutchman/macro_types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits"] }
proc-macro2 = "1"
paste = "1.0.14"
macro_types_helpers = "0.2.0"
derive_more = "0.99.17"
convert_case = "0.6.0"
