[package]
name = "macro_types_helpers"
version = "0.1.0"
edition = "2021"
description = "An internal helper library for macro_types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheLazyDutchman/macro_types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macro_types = { path = "../", version = "0.3.0" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits"] }
